QML: Guard QProperty change triggers against deletion of target

Previously, we relied on QObject* pointers being unique even after
deletion of the objects. That's not good.

Fixes: QTBUG-114329
Change-Id: Ia0a2c1d2cb5d8a0d47ec00e73424c959c59c09bc
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 46842ec7c67ce16ade08076c0fd7e78e96f33887)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>